--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 </head>
 <body>
     <h1>無限の猿定理シミュレーション</h1>
+    <input type="text" id="targetString" placeholder="目標の文字列を入力してください">
+    <button id="startButton">開始</button>
     <p id="status">シミュレーション中...</p>
     <div id="output"></div>
     <script src="script.js"></script>
